--- a/web_project_3/blocks/page/page.css
+++ b/web_project_3/blocks/page/page.css
@@ -7,6 +7,7 @@
     font-family: "Inter", sans-serif;
     margin: 0 auto;
     color: white;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px){
