--- a/web_project_3/blocks/photo-grid/photo-grid.css
+++ b/web_project_3/blocks/photo-grid/photo-grid.css
@@ -8,6 +8,7 @@
     justify-content: center;
     margin: 92px 0 92px;
     padding: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
