--- a/web_project_3/blocks/footer/footer.css
+++ b/web_project_3/blocks/footer/footer.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     margin: 92px 0 24px;
+    width: 100%;
 }
 
 @media screen and (max-width: 320px) {
