--- a/web_project_3/blocks/header/header.css
+++ b/web_project_3/blocks/header/header.css
@@ -7,11 +7,13 @@
     min-height: 78px;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 0 100px;
+    padding: 0;
+    margin: 0 100px;
+    
 }
 
 @media screen and (max-width: 1024px) {
     .header{
-        padding: 0;
+        margin: 0;
     }
 }
