--- a/web_project_3/blocks/intro/intro.css
+++ b/web_project_3/blocks/intro/intro.css
@@ -6,8 +6,8 @@
 @import url(./__list-text/_type/intro__list-text_type_bold.css);
 
 .intro{
-    padding: 0 100px;
-    margin: 0;
+    padding: 0;
+    margin: 0 100px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,6 @@
 
 @media screen and (max-width: 1024px) {
     .intro{
-        padding: 0;
+        margin: 0;
     }
 }
