--- a/web_project_3/blocks/lead/__image/lead__image.css
+++ b/web_project_3/blocks/lead/__image/lead__image.css
@@ -1,17 +1,17 @@
 .lead__image{
-    height: 615px;
+    max-height: 615px;
     width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image{
-        height: 580px;
+        max-height: 580px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead__image{
-        height: 480px;
+        max-height: 480px;
         max-width: 768px;
         width: 100vw;
         position: relative;
@@ -20,7 +20,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__image{
-        height: 200px;
+        max-height: 200px;
         max-width: 320px;
         width: 100vw;
         position: relative;
