--- a/web_project_3/blocks/lead/lead.css
+++ b/web_project_3/blocks/lead/lead.css
@@ -7,12 +7,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 100px;
-    margin: 0;
+    padding: 0;
+    margin: 0 100px;
 }
 
 @media screen and (max-width: 1024px) {
     .lead{
-        padding: 0;
+        margin: 0;
     }
 }
