--- a/web_project_3/blocks/page/page.css
+++ b/web_project_3/blocks/page/page.css
@@ -5,27 +5,28 @@
     font-family: "Inter", sans-serif;
     max-width: 1280px;
     margin: 0 auto;
+    padding: 0;
     color: white;
-    box-sizing: border-box;
+    width: 100%;
 }
 
 @media screen and (max-width: 1024px){
     .page{
-        min-width: 1024px;
-        max-width: 1279px;
+        max-width: 1024px;
+        min-width: 769px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .page{
-        min-width: 768px;
-        max-width: 1023px;
+        max-width: 768px;
+        overflow-x: hidden;
     }
 }
 
 @media screen and (max-width: 320px) {
     .page{
-        min-width: 320px;
-        max-width: 767px;
+        max-width: 320px;
+        overflow-x: hidden;
     }
 }
