--- a/web_project_3/blocks/cover/cover.css
+++ b/web_project_3/blocks/cover/cover.css
@@ -13,7 +13,7 @@
     .cover{
         height: 640px;
         max-width: 1024px;
-        width: 100vw;
+        width: calc(100% + 96px);
         position: relative;
         right: 48px;
     }
@@ -23,7 +23,7 @@
     .cover{
         height: 480px;
         max-width: 768px;
-        width: 100vw;
+        width: 100%;
         position: relative;
         right: 24px;
     }
@@ -34,7 +34,7 @@
         margin-top: 64px;
         height: 200px;
         max-width: 320px;
-        width: 100vw;
+        width: 100vh;
         position: relative;
         right: 16px;
     }
