--- a/web_project_3/blocks/lead/__image/lead__image.css
+++ b/web_project_3/blocks/lead/__image/lead__image.css
@@ -13,7 +13,7 @@
     .lead__image{
         max-height: 480px;
         max-width: 768px;
-        width: 100vw;
+        width: 100%;
         position: relative;
     }
 }
@@ -22,7 +22,7 @@
     .lead__image{
         max-height: 200px;
         max-width: 320px;
-        width: 100vw;
+        width: 100%;
         position: relative;
     }
 }
