--- a/web_project_3/blocks/place/__image/place__image.css
+++ b/web_project_3/blocks/place/__image/place__image.css
@@ -1,28 +1,22 @@
 .place__image{
-    max-height: 460px;
-    max-width: 460px;
+    width:100%;
 }
 
 @media screen and (max-width: 1024px) {
     .place__image{
-        max-height: 440px;
-        max-width: 440px;
+       width:100%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__image{
-        max-height: 340px;
-        max-width: 340px;
+        width:100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image{
-        max-height: 320px;
-        max-width: 100vw;
-        overflow: visible;
-        position: relative;
-        right: 16px;
+        width:100vw;
+        margin-left:-16px;
     }
 }
