--- a/web_project_3/blocks/place/__image/place__image.css
+++ b/web_project_3/blocks/place/__image/place__image.css
@@ -1,22 +1,28 @@
 .place__image{
-    width:100%;
+    max-height: 460px;
+    max-width: 460px;
 }
 
 @media screen and (max-width: 1024px) {
     .place__image{
-       width:100%;
+        max-height: 440px;
+        max-width: 440px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__image{
-        width:100%;
+        max-height: 340px;
+        max-width: 340px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image{
-        width:100vw;
-        margin-left:-16px;
+        max-height: 320px;
+        max-width: 100vw;
+        overflow: visible;
+        position: relative;
+        right: 16px;
     }
 }
