--- a/web_project_3/blocks/place/place.css
+++ b/web_project_3/blocks/place/place.css
@@ -7,12 +7,11 @@
 
 .place {
     display: grid;
-    grid-template-columns: 41% 42%;
+    grid-template-columns: 460px 484px;
     grid-template-rows: fit-content(152px) fit-content(571px);
     grid-gap: 48px 40px;
-    justify-content:center;
     padding: 0;
-    margin: 0;
+    margin: 0 100px;
     width: 100%;
 }
 
@@ -22,15 +21,14 @@
 
 @media screen and (max-width: 1024px) {
     .place{
-        grid-template-columns: 47.5% 49.5%;
+        grid-template-columns: 440px 456px;
         margin: 0;
-        grid-gap: 48px 32px;
     }   
 }
 
 @media screen and (max-width: 768px) {
     .place{
-        grid-template-columns: 47.5% 49.5%;
+        grid-template-columns: 340px 352px;
         grid-gap: 48px 28px;
         margin: 0;
     }
