--- a/web_project_3/blocks/cover/__overlay/cover__overlay.css
+++ b/web_project_3/blocks/cover/__overlay/cover__overlay.css
@@ -1,9 +1,34 @@
 .cover__overlay{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+    min-height: 740px;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__overlay{
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__overlay{
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .cover__overlay{
+        min-height: 300px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__overlay{
+        min-height: 200px;
+    }
 }
