--- a/web_project_3/blocks/cover/__subtitle/cover__subtitle.css
+++ b/web_project_3/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,14 @@
 .cover__subtitle{
     font-size: 18px;
     line-height: 22px;
-    width: fit-content;
-    z-index: 1;
+    max-width: 320px;
     text-align: center;
+    align-self: center;
     margin: 0;
+    z-index: 1;
 }
+
+
 
 @media screen and (max-width: 320px) {
     .cover__subtitle{
