--- a/web_project_3/blocks/cover/cover.css
+++ b/web_project_3/blocks/cover/cover.css
@@ -2,40 +2,48 @@
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__background/cover__background.css);
 @import url(./__overlay/cover__overlay.css);
+@import url(./__link/cover__link.css);
 
 .cover{
-    height: 740px;
+    min-height: 740px;
     margin: 90px 0 0 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 @media screen and (max-width: 1024px) {
     .cover{
-        height: 640px;
+        min-height: 640px;
         max-width: 1024px;
         width: calc(100% + 96px);
-        position: relative;
-        right: 48px;
+        margin-left: -48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .cover{
-        height: 480px;
+        min-height: 480px;
         max-width: 768px;
         width: calc(100% + 48px);
-        position: relative;
-        right: 24px;
+        margin-left: -24px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .cover{
+        min-height: 300px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover{
-        margin-top: 64px;
-        height: 200px;
+        margin: 64px 0 0 -16px;
+        min-height: 200px;
         max-width: 320px;
         width: calc(100% + 32px);
-        position: relative;
-        right: 16px;
     }
 }
