--- a/web_project_3/blocks/footer/__copyright/footer__copyright.css
+++ b/web_project_3/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,9 @@
     align-self: flex-start;
     margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+    .footer__copyright{
+        line-height: 1;
+    }   
+}
