--- a/web_project_3/blocks/intro/__subtitle/intro__subtitle.css
+++ b/web_project_3/blocks/intro/__subtitle/intro__subtitle.css
@@ -6,10 +6,14 @@
     line-height: 1.42;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .intro__subtitle{
         max-width: 100%;
-        font-size: 24px;
-        line-height: 1.25;
     }   
+}
+
+@media screen and (max-width: 320px) {
+    .intro__subtitle{
+        line-height: 1.25;
+    }
 }
