--- a/web_project_3/blocks/intro/intro.css
+++ b/web_project_3/blocks/intro/intro.css
@@ -3,7 +3,7 @@
 @import url(./__text/intro__text.css);
 @import url(./__list/intro__list.css);
 @import url(./__list-text/intro__list-text.css);
-@import url(./__list-text/_type/intro__list-text_type_bold.css);
+@import url(./__span-bold/intro__span-bold.css);
 
 .intro{
     padding: 0;
@@ -11,10 +11,18 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    max-width: 690px;
 }
 
 @media screen and (max-width: 1024px) {
     .intro{
         margin: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro{
+        width: 100%;
+        max-width: 768px;
     }
 }
