--- a/web_project_3/blocks/lead/__image/lead__image.css
+++ b/web_project_3/blocks/lead/__image/lead__image.css
@@ -14,6 +14,7 @@
         max-height: 480px;
         max-width: 768px;
         width: calc(100% + 48px);
+        margin-left: -24px;
     }
 }
 
@@ -22,5 +23,6 @@
         max-height: 200px;
         max-width: 320px;
         width: calc(100% + 32px);
+        margin-left: -16px;
     }
 }
