--- a/web_project_3/blocks/place/__title/place__title.css
+++ b/web_project_3/blocks/place/__title/place__title.css
@@ -1,8 +1,10 @@
 .place__title{
     font-size: 72px;
     font-weight: 900;
+    line-height: 1.06;
     margin: 0;
     padding: 0;
+    align-self: end;
 }
 
 @media screen and (max-width: 1024px) {
@@ -14,11 +16,13 @@
 @media screen and (max-width: 768px) {
     .place__title{
         font-size: 42px;
+        line-height: 1.1;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__title{
         font-size: 32px;
+        line-height: 1.09;
     }
 }
