--- a/web_project_3/pages/index.css
+++ b/web_project_3/pages/index.css
@@ -11,3 +11,4 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/content/content.css);
