--- a/web_project_3/blocks/cover/__link/cover__link.css
+++ b/web_project_3/blocks/cover/__link/cover__link.css
@@ -1,6 +1,8 @@
 .cover__link{
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
+    position: absolute;
     text-decoration: none;
 }
