--- a/web_project_3/blocks/cover/__overlay/cover__overlay.css
+++ b/web_project_3/blocks/cover/__overlay/cover__overlay.css
@@ -1,34 +1,15 @@
 .cover__overlay{
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    color: white;
     width: 100%;
-    min-height: 740px;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background: #2A2C2F;
+    opacity: .8;
+    transition: opacity .4s linear;
+    position: absolute;
 }
 
-@media screen and (max-width: 1024px) {
-    .cover__overlay{
-        min-height: 640px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__overlay{
-        min-height: 480px;
-    }
-}
-
-@media screen and (max-width: 490px) {
-    .cover__overlay{
-        min-height: 300px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__overlay{
-        min-height: 200px;
-    }
+.cover__overlay:hover{
+    opacity: .3;
+    transition: opacity .4s linear;
 }
