--- a/web_project_3/blocks/cover/__subtitle/cover__subtitle.css
+++ b/web_project_3/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,6 @@
     line-height: 22px;
     max-width: 320px;
     text-align: center;
-    align-self: center;
     margin: 0;
     z-index: 1;
 }
@@ -12,7 +11,7 @@
 
 @media screen and (max-width: 320px) {
     .cover__subtitle{
-        max-width: 100%;
+        max-width: 288px;
         font-size: 14px;
         line-height: 16px;
     }
