--- a/web_project_3/blocks/cover/__title/cover__title.css
+++ b/web_project_3/blocks/cover/__title/cover__title.css
@@ -4,9 +4,10 @@
     line-height: 76px;
     margin: 0 0 32px;
     text-align: center;
-    color: white;
     z-index: 1;
 }
+
+
 
 @media screen and (max-width: 490px) {
     .cover__title{
@@ -20,5 +21,6 @@
     .cover__title{
         font-size: 32px;
         line-height: 35px;
+        max-width: 288px;
     }
 }
