--- a/web_project_3/blocks/cover/cover.css
+++ b/web_project_3/blocks/cover/cover.css
@@ -1,8 +1,9 @@
 @import url(./__title/cover__title.css);
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__background/cover__background.css);
-@import url(./__overlay/cover__overlay.css);
+@import url(./__container/cover__container.css);
 @import url(./__link/cover__link.css);
+@import url(./__overlay/cover__overlay.css);
 
 .cover{
     min-height: 740px;
@@ -19,8 +20,7 @@
     .cover{
         min-height: 640px;
         max-width: 1024px;
-        width: calc(100% + 96px);
-        margin-left: -48px;
+        width: 100%;
     }
 }
 
@@ -28,22 +28,20 @@
     .cover{
         min-height: 480px;
         max-width: 768px;
-        width: calc(100% + 48px);
-        margin-left: -24px;
     }
 }
 
 @media screen and (max-width: 490px) {
     .cover{
         min-height: 300px;
+        max-width: 490px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover{
-        margin: 64px 0 0 -16px;
+        margin: 64px 0 0 0;
         min-height: 200px;
         max-width: 320px;
-        width: calc(100% + 32px);
     }
 }
