--- a/web_project_3/blocks/footer/__links-container/footer__links-container.css
+++ b/web_project_3/blocks/footer/__links-container/footer__links-container.css
@@ -5,6 +5,7 @@
 @media screen and (max-width: 320px) {
     .footer__links-container{
         flex-direction: column;
-        margin-bottom: 48px;
+        margin: 0 0 48px 0;
+        width: calc(100% - 32px);
     }
 }
