--- a/web_project_3/blocks/footer/footer.css
+++ b/web_project_3/blocks/footer/footer.css
@@ -7,12 +7,32 @@
     display: flex;
     justify-content: space-between;
     margin: 92px 0 24px;
-    width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+    .footer{
+        padding: 0 48px;
+        max-width: 1024px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer{
+        padding: 0 24px;
+        max-width: 768px;
+    }
 }
 
 @media screen and (max-width: 400px) {
     .footer{
         margin: 64px 0 24px;
         flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer{
+        padding: 0 16px;
+        max-width: 320px;
     }
 }
