--- a/web_project_3/blocks/header/header.css
+++ b/web_project_3/blocks/header/header.css
@@ -15,5 +15,18 @@
 @media screen and (max-width: 1024px) {
     .header{
         margin: 0;
+        padding: 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header{
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header{
+        padding: 0 16px;
     }
 }
