--- a/web_project_3/blocks/lead/__image/lead__image.css
+++ b/web_project_3/blocks/lead/__image/lead__image.css
@@ -13,8 +13,7 @@
     .lead__image{
         max-height: 480px;
         max-width: 768px;
-        width: calc(100% + 48px);
-        margin-left: -24px;
+        width: 100%;
     }
 }
 
@@ -22,7 +21,7 @@
     .lead__image{
         max-height: 200px;
         max-width: 320px;
-        width: calc(100% + 32px);
-        margin-left: -16px;
+        width: 100%;
+        margin: 0;
     }
 }
