--- a/web_project_3/blocks/lead/__subtitle/lead__subtitle.css
+++ b/web_project_3/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,10 +8,21 @@
     margin: 0;
 }
 
+@media screen and (max-width: 768px) {
+    .lead__subtitle{
+        width: calc(100% - 48px);
+    }
+}
+
 @media screen and (max-width: 420px) {
     .lead__subtitle{
         font-size: 16px;
         line-height: 1.25;
-        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle{
+        width: calc(100% - 32px);
     }
 }
