--- a/web_project_3/blocks/lead/__title/lead__title.css
+++ b/web_project_3/blocks/lead/__title/lead__title.css
@@ -8,10 +8,22 @@
     margin: 0;
 }
 
+@media screen and (max-width: 768px) {
+    .lead__title{
+        width: calc(100% - 48px);
+    }
+}
+
 @media screen and (max-width: 420px) {
     .lead__title{
         font-size: 40px;
         line-height: 1.1;
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title{
+        width: calc(100% - 32px);
     }
 }
