--- a/web_project_3/blocks/lead/lead.css
+++ b/web_project_3/blocks/lead/lead.css
@@ -15,5 +15,12 @@
 @media screen and (max-width: 1024px) {
     .lead{
         margin: 0;
+        padding: 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead{
+        padding: 0;
     }
 }
