--- a/web_project_3/blocks/place/__text/place__text.css
+++ b/web_project_3/blocks/place/__text/place__text.css
@@ -14,3 +14,9 @@
         line-height: 26px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__text{
+        padding: 0 16px;
+    }
+}
