--- a/web_project_3/blocks/places/places.css
+++ b/web_project_3/blocks/places/places.css
@@ -7,6 +7,18 @@
  
 @media screen and (max-width: 1024px) {
     .places{
-        padding: 0;
+        padding: 0 48px;
     }   
+}
+
+@media screen and (max-width: 768px) {
+    .places{
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places{
+        padding: 0;
+    }
 }
