--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -6,3 +6,8 @@
     position: absolute;
     text-decoration: none;
 }
+
+.cover__link:hover .cover__overlay{
+    opacity: .3;
+    transition: opacity .4s linear;
+}
