--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,11 +3,39 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    position: absolute;
     text-decoration: none;
+    background: url(../../../images/cover-route-66.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 740px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.cover__link:hover .cover__overlay{
-    opacity: .3;
-    transition: opacity .4s linear;
+@media screen and (max-width: 1024px) {
+    .cover__link{
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__link{
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .cover__link{
+        min-height: 300px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__link{
+        min-height: 200px;
+    }
 }
