--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,10 +1,13 @@
 .cover__overlay{
-    width: 100%;
     height: 100%;
-    padding: 0;
-    margin: 0;
+    width: 100%;
     background: #2A2C2F;
-    opacity: .8;
+    opacity: .3;
     transition: opacity .4s linear;
     position: absolute;
+}
+
+.cover:hover .cover__overlay{
+    opacity: .8;
+    transition: opacity .4s linear;
 }
