--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,5 +4,5 @@
     align-self: flex-start;
     padding-top: 8px;
     text-transform: uppercase;
-    letter-spacing: 15%;
+    letter-spacing: 0.15em;
 }
